[project]
name = "comfyui-serving-toolkit"
description = "This extension adds nodes that allow you to easily serve your workflow (for example using a discord bot) "
version = "1.0.1"
license = "LICENSE"
dependencies = ["discord.py", "websocket-client", "rel", "pyTelegramBotAPI", "opencv-python"]

[project.urls]
Repository = "https://github.com/matan1905/ComfyUI-Serving-Toolkit"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "iammatan"
DisplayName = "ComfyUI-Serving-Toolkit"
Icon = ""
